# CUDA-to-Apple-Silicon-Metal-Foundations

./: Cargo.toml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: CI.yml
docs/: TRANSLATION_GUIDE.md
python/c2m_nx/: __init__.py  algorithms.py  conversion.py
src/: accelerate_ops.rs  connected_components.rs  delta_stepping.rs  gnn.rs  graph.rs  lib.rs  metal_runner.rs  nbody.rs  pagerank.rs  primitives.rs  spmv.rs
src/kernels/: connected_components.metal  delta_stepping.metal  gnn.metal  nbody.metal  pagerank.metal  scan.metal  spmv.metal
