[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "c2m_core"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy", "scipy", "networkx"]
version = "0.1.0"
description = "CUDA-to-Apple-Silicon-Metal-Foundations: Bare-metal GPU accelerator for Mac"

[tool.maturin]
features = ["pyo3/extension-module"]
